--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
     <!-- manifest 加入這邊～ -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="../manifest.json">
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
