--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
-    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="shortcut icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- <meta name="theme-color" content="#000000"> -->
     <!--
@@ -12,12 +12,12 @@
     -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
     <!-- manifest 加入這邊～ -->
-    <link rel="manifest" href="../manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="React-PWA">
-    <link rel="apple-touch-icon" href="../src/images/favicon-144x144.png">
+    <link rel="apple-touch-icon" href="./favicon-144x144.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
