--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="React-PWA">
-    <link rel="apple-touch-icon" href="./src/images/favicon-144x144.png">
+    <link rel="apple-touch-icon" href="./favicon-144x144.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
