--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,6 @@
           });
       }
   </script>
-  <h1>Hello PWA for React!</h1>
+  <!-- <h1>Hello PWA for React!</h1> -->
   </body>
 </html>
